--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -694,7 +694,7 @@ service vendor.adsprpcd /vendor/bin/adsprpcd
 service vendor.per_mgr /vendor/bin/pm-service
     class core
     user system
-    group system net_raw
+    group system
     writepid /dev/cpuset/system-background/tasks
 
 service vendor.per_proxy /vendor/bin/pm-proxy
