--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -1,3 +1,7 @@
+on early-init
+    # Enable sched boost
+    write /proc/sys/kernel/sched_boost 1
+
 on boot
     # add a cpuset for the camera daemon
     # we want all the little cores for camera
@@ -13,9 +17,6 @@ on boot
     write /dev/cpuset/system-background/cpus 5-7
     write /dev/cpuset/top-app/cpus 0-7
     write /dev/cpuset/camera-daemon/cpus 4-7
-
-    # Enable sched boost
-    write /proc/sys/kernel/sched_boost 1
 
 on enable-low-power
     # HMP scheduler settings
