--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -743,10 +743,16 @@ on property:sys.wifi.tethering=true
 
 #start camera server as daemon
 service qcamerasvr /system/bin/mm-qcamera-daemon
-   class late_start
+   class main
    user camera
    group camera system inet input graphics
    writepid /dev/cpuset/system-background/tasks
+
+on property:init.svc.media=restarting
+    restart qcamerasvr
+
+on property:init.svc.servicemanager=restarting
+    restart qcamerasvr
 
 # Allow usb charging to be disabled peristently
 on property:persist.usb.chgdisabled=1
