--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -306,6 +306,9 @@ on boot
     chown wifi wifi /sys/module/wlan/parameters/fwpath
 
 on fs
+    # Start HW service manager early
+    start hwservicemanager
+
     wait /dev/block/platform/soc.0/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc.0/${ro.boot.bootdevice} /dev/block/bootdevice
     
@@ -363,6 +366,12 @@ on post-fs
     chown oem_5004 oem_5004 /persist/bt/bt_bdaddr
     chmod 0664 /persist/bt/bt_bdaddr
     chmod 0600 /persist/whisper/whisper_only/vector0.bin
+
+on late-fs
+    # Wait for hwservicemanager ready since fsck might be triggered in mount_all --late
+    # In such case, init won't responce the property_set from hwservicemanager and then
+    # cause services for bootanim not running.
+    wait_for_prop hwservicemanager.ready true
 
 on post-fs-data
     mkdir /data/tombstones 0771 system system
