athene: Changes to stop rtp daemon during shutdown
* Changes to stop rtp daemon during shutdown

Change-Id: I08d56dba615136a2c02c3aa11a55bd3e7d84f6a0
Signed-off-by: Rohit Vashisht <rohitv88cf@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -782,6 +782,7 @@ on property:init.svc.per_mgr=running
 
 on property:sys.shutdown.requested=*
     stop vendor.per_proxy
+    stop vendor.ims_rtp_daemon
 
 service vendor.ppd /vendor/bin/mm-pp-daemon
     class hal
