--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -209,6 +209,9 @@ on boot
     chown system system /sys/homebutton/enable
     chown system system /sys/homebutton/enable_wakeup
 
+    # SMBChg control
+    chown system system /sys/kernel/smbchg_control/turbo_charging
+
     # STML0XX driver parameter permissions
     chown root oem_5004 /sys/module/stml0xx/parameters/irq_disable
     chmod 0660 /sys/module/stml0xx/parameters/irq_disable
