athene: configs: Update Audio config from OPJ28.128
Change-Id: I76d12947fe24f04ad5cb9c2549df9147655e7794

--- a/configs/audio/audio_ext_spkr.conf
+++ b/configs/audio/audio_ext_spkr.conf
@@ -1,6 +1,7 @@
 global_config {
     name Affinity
-    sonification_pad 12
+    sonification_pad 20
+    sonification_prox_timeout_sec 5
 }
 
 ring {
