athene: gps: Set accuracy threshold to 5000
Change-Id: I7a4ce58d708161bd6dcc43ce9a01e2048f0c3e04

--- a/gps/etc/gps.conf
+++ b/gps/etc/gps.conf
@@ -66,7 +66,7 @@ CAPABILITIES=0x37
 
 # Accuracy threshold for intermediate positions
 # less accurate positions are ignored, 0 for passing all positions
-# ACCURACY_THRES=5000
+ACCURACY_THRES=5000
 
 ################################
 ##### AGPS server settings #####
