--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -998,7 +998,7 @@ service adsprpcd /system/bin/adsprpcd
 service per_mgr /system/bin/pm-service
     class core
     user system
-    group system
+    group system net_raw
     writepid /dev/cpuset/system-background/tasks
 
 service vendor.per_proxy /vendor/bin/pm-proxy
