--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -211,6 +211,9 @@ on boot
     # SMBChg control
     chown system system /sys/kernel/smbchg_control/turbo_charging
 
+    # Kcal control
+    chown system system /sys/devices/platform/kcal_ctrl.0/kcal
+
     # STML0XX driver parameter permissions
     chown root oem_5004 /sys/module/stml0xx/parameters/irq_disable
     chmod 0660 /sys/module/stml0xx/parameters/irq_disable
