--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -207,6 +207,7 @@ on boot
     # FPC home button permissions
     chown system system /sys/homebutton/enable
     chown system system /sys/homebutton/enable_wakeup
+    chown system system /sys/homebutton/enable_off
 
     # SMBChg control
     chown system system /sys/kernel/smbchg_control/turbo_charging
