athene: Perf derps
Change-Id: I064c47b7d6ffebd4487a2d0897b1e3178dec249f

--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -164,7 +164,7 @@ on enable-low-power
 
     # Set perfd properties
     rm /data/system/perfd/default_values
-    start perfd
+    start vendor.perfd
 
 on property:init.svc.recovery=running
     trigger enable-low-power
