athene: rootdir: Update for the newer pm-service
Change-Id: I5d63ca22394fa18229cce8dc58c58a0089d74a5d

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -999,7 +999,7 @@ service adsprpcd /system/bin/adsprpcd
     user media
     group media
 
-service per_mgr /system/bin/pm-service
+service vendor.per_mgr /vendor/bin/pm-service
     class core
     user system
     group system net_raw
