--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -34,19 +34,14 @@ on early-init
     chmod 0755 /sys/kernel/debug
 
     mkdir /firmware 0771 system system
-    mkdir /system 0777 root root
-    symlink /data/vendor/tombstones /tombstones
-    mkdir /dsp 0771 media media
-
-    # Create modem FSG mount point
-    mkdir /fsg 755 root root
-
-    # Mount point for Digital Personalization partition
     mkdir /customize 0500 root root
+    mkdir /dsp 0771 media media
+    mkdir /fsg 755 root root
+    mkdir /system 0777 root root
+
+    symlink /data/vendor/tombstones /tombstones
 
 on init
-    start qfintverify
-
     # Set permissions for persist partition
     mkdir /persist 0771 system system
 
@@ -61,16 +56,9 @@ on init
     chown system log /sys/fs/pstore/dmesg-ramoops-0
     chmod 0640 /sys/fs/pstore/dmesg-ramoops-0
 
-    # Setup kernel dropbox permissions so that dropboxd can utilize it
-    chown root diag /sys/kernel/dropbox/event
-    chown root diag /sys/kernel/dropbox/data
-
     # Configure coredump
     write /proc/sys/kernel/core_pattern "|/system/bin/coredump %e %p %t"
     write /proc/self/coredump_filter "0x7f"
-
-    # ESDFS
-    chown mot_esdfs root /proc/fs/esdfs/packages
 
     write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
 
@@ -154,7 +142,7 @@ on boot
     chmod 0664 /sys/class/graphics/fb0/modes
     chmod 0664 /sys/class/graphics/fb0/mode
 
-    #Create QMUX deamon socket area
+    # Create QMUX deamon socket area
     mkdir /dev/socket/qmux_radio 0770 radio radio
     chmod 2770 /dev/socket/qmux_radio
     mkdir /dev/socket/qmux_audio 0770 media audio
@@ -170,17 +158,17 @@ on boot
     mkdir /persist/misc 0770 system system
     mkdir /persist/time 0770 system system
 
-    #Create NETMGR daemon socket area
+    # Create NETMGR daemon socket area
     mkdir /dev/socket/netmgr 0750 radio radio
 
-    #create netmgr log dir
+    # Create netmgr log dir
     mkdir /data/vendor/netmgr 0770 radio radio
     chmod 0770 /data/vendor/netmgr
 
     # Create directory for radio
     mkdir /data/vendor/radio 0770 system radio
 
-    #Remove SUID bit for iproute2 ip tool
+    # Remove SUID bit for iproute2 ip tool
     chmod 0755 /system/bin/ip
 
     chmod 0444 /sys/devices/platform/msm_hsusb/gadget/usb_state
@@ -190,7 +178,7 @@ on boot
     write /proc/sys/net/core/rmem_max  8388608
     write /proc/sys/net/core/wmem_max  8388608
 
-    #To allow interfaces to get v6 address when tethering is enabled
+    # To allow interfaces to get v6 address when tethering is enabled
     write /proc/sys/net/ipv6/conf/default/accept_ra_defrtr 1
 
     # To prevent out of order acknowledgements from making
@@ -219,7 +207,7 @@ on boot
     chown root oem_5004 /sys/module/stml0xx/parameters/irq_disable
     chmod 0660 /sys/module/stml0xx/parameters/irq_disable
 
-    #STML0 device permissions
+    # STML0 device permissions
     chown system compass /dev/stml0xx
     chmod 0660 /dev/stml0xx
     chown compass compass /dev/stml0xx_as
@@ -333,15 +321,13 @@ on fs
     symlink /persist /pds
 
     wait /dev/block/bootdevice/by-name/hw
-    start oem-hw-sh
+
+    start vendor.oem-hw-sh
 
 on post-fs
     mkdir /persist/camera 0755 oem_5004 oem_5004
     mkdir /persist/camera/focus 0775 camera oem_5004
     mkdir /persist/camera/ledcal 0775 camera oem_5004
-    mkdir /persist/factory 0755 oem_5004 oem_5004
-    mkdir /persist/factory/audio 0755 oem_5004 system
-    mkdir /persist/factory/regulatory 0755 oem_5004 system
     mkdir /persist/public 0755 oem_5004 oem_5004
     mkdir /persist/public/atvc 0770 oem_5012 shell
     mkdir /persist/public/battd 0755 oem_5000 oem_5004
@@ -354,13 +340,8 @@ on post-fs
     mkdir /persist/bt 0755 oem_5004 bluetooth
     mkdir /persist/wmdrm 0775 oem_5003 oem_5003
     mkdir /persist/security 02770 oem_5007 oem_5007
-    mkdir /persist/batt_health 0755 oem_5001 oem_5001
     mkdir /persist/mdm 0770 radio radio
 
-    chown oem_5004 oem_5004 /persist/factory/fti
-    chmod 0660 /persist/factory/fti
-    chown oem_5004 oem_5004 /persist/factory/byte
-    chmod 0660 /persist/factory/byte
     chmod 0660 /persist/wifi/wlan_mac.bin
     chown oem_5004 oem_5004 /persist/bt/bt_bdaddr
     chmod 0664 /persist/bt/bt_bdaddr
@@ -375,10 +356,12 @@ on post-fs-data
     mkdir /data/vendor/tombstones/lpass 0771 system system
     mkdir /data/vendor/tombstones/wcnss 0771 system system
     mkdir /data/vendor/tombstones/dsps 0771 system system
+
     mkdir /persist/data/sfs 0700 system system
     mkdir /persist/data/tz 0700 system system
     mkdir /data/misc/dts 0770 media audio
     mkdir /data/misc/audio_pp 0771 media audio
+
     mkdir /dev/radio 0770 radio radio
 
     # Create directory for TZ Apps
@@ -404,10 +387,6 @@ on post-fs-data
     chown system system /data/connectivity
     mkdir /data/connectivity/wqeclient 0771 system system
     chown system system /data/connectivity/wqeclient
-
-    # Create the directories used by DPM subsystem
-    mkdir /data/dpm 0771 system system
-    chown system system /data/dpm
 
     mkdir /data/dpm/nsrm 0771 system system
     chown system system /data/dpm/nsrm
@@ -442,11 +421,11 @@ on post-fs-data
     chown system system /sys/devices/platform/msm_sdcc.3/polling
     chown system system /sys/devices/platform/msm_sdcc.4/polling
 
-    #Create the symlink to qcn wpa_supplicant folder for ar6000 wpa_supplicant
+    # Create the symlink to qcn wpa_supplicant folder for ar6000 wpa_supplicant
     mkdir /data/system 0775 system system
     #symlink /data/misc/wifi/wpa_supplicant /data/system/wpa_supplicant
 
-    #Create directories for Location services
+    # Create directories for Location services
     mkdir /data/vendor/location 0770 gps gps
     mkdir /data/vendor/location/mq 0770 gps gps
     mkdir /data/vendor/location/xtwifi 0770 gps gps
@@ -454,11 +433,11 @@ on post-fs-data
     mkdir /data/vendor/location/quipc 0770 gps system
     mkdir /data/vendor/location/gsiff 0770 gps gps
 
-    #Create directory from IMS services
+    # Create directory from IMS services
     mkdir /data/shared 0755
     chown system system /data/shared
 
-    #Create directory for FOTA
+    # Create directory for FOTA
     mkdir /data/fota 0771
     chown system system /data/fota
 
@@ -467,19 +446,16 @@ on post-fs-data
 
     mkdir /data/audio/ 0770 media audio
 
-    #Create a folder for SRS to be able to create a usercfg file
+    # Create a folder for SRS to be able to create a usercfg file
     mkdir /data/data/media 0770 media media
 
-    #Create folder for mm-qcamera-daemon
+    # Create folder for mm-qcamera-daemon
     mkdir /data/camera 0770 media camera
 
-    #Create PERFD deamon related dirs
-    mkdir /data/system/perfd 0770 root system
-    chmod 2770 /data/system/perfd
-
-    # NFC local data and nfcee xml storage
-    mkdir /data/nfc 0770 nfc nfc
-    mkdir /data/nfc/param 0770 nfc nfc
+    # Create PERFD deamon related dirs
+    mkdir /data/vendor/perfd 0770 root system
+    chmod 2770 /data/vendor/perfd
+    rm /data/vendor/perfd/default_values
 
     # Sensor
     mkdir /persist/sensors 0775 system system
@@ -502,7 +478,7 @@ on post-fs-data
     mkdir /data/misc/SelfHost/Running/ 2750 system shell
     mkdir /data/misc/SelfHost/socket/ 2770 system system
 
-    #Create FM dir for patchdownloader
+    # Create FM dir for patchdownloader
     mkdir /data/misc/fm 0770 system system
     chmod 0770 /data/misc/fm
 
@@ -510,35 +486,18 @@ on post-fs-data
     mkdir /persist/security 02770 oem_5007 oem_5007
     mkdir /data/local/dbvc 0750 oem_5004 shell
 
-    # Setup folder for native to transfer data to NativeDropBoxAgent
-    mkdir /data/system/dropbox-add 0730 system diag
-
     # Create directory for cutback
     mkdir /data/misc/cutback 0770 radio wifi
 
     # Create directory for fm_radio
     mkdir /data/misc/fm_radio 0770 system system
 
-    #setup folder for WLAN WAPI
+    # setup folder for WLAN WAPI
     mkdir /data/wapi_certificate 0750 system wifi
     chown system wifi /data/wapi_certificate
 
     # Create directory used by power_supply_logger
     mkdir /data/power_supply_logger 0750 oem_5001 log
-
-    # Subsystem RAM-dumps
-    mkdir /data/ss-ram-dumps 0750 radio log
-    mkdir /data/ss-ram-dumps/bp-dumps 0750 radio log
-    mkdir /data/ss-ram-dumps/riva-dumps 0750 radio log
-
-    # Permissions for Factory Test of Charging Paths
-    chown oem_5001 oem_5001 /sys/class/power_supply/battery/device/force_chg_auto_enable
-    chown oem_5001 oem_5001 /sys/class/power_supply/battery/device/force_chg_ibatt
-    chown oem_5001 oem_5001 /sys/class/power_supply/battery/device/force_chg_itrick
-    chown oem_5001 oem_5001 /sys/class/power_supply/battery/device/force_chg_iusb
-    chown oem_5001 oem_5001 /sys/class/power_supply/battery/device/force_chg_usb_suspend
-    chown oem_5001 oem_5001 /sys/class/power_supply/battery/device/force_chg_fail_clear
-    chown oem_5001 oem_5001 /sys/class/power_supply/battery/device/force_chg_usb_otg_ctl
 
     # Setup folder for aplogd
     mkdir /data/aplogd 0750 log log
@@ -570,7 +529,7 @@ on post-fs-data
     # Sensor Hub calibration data directory
     mkdir /data/misc/sensorhub 0770 system compass
 
-    #Create directories for Fingerprint
+    # Create directories for Fingerprint
     mkdir /data/vendor/misc/qti_fp 0770 system system
     mkdir /data/vendor/misc/qti_fp/bg_estimation 0770 system system
     mkdir /data/vendor/misc/qti_fp/calib_test 0770 system system
@@ -581,27 +540,8 @@ on post-fs-data
 
     setprop vold.post_fs_data_done 1
 
-# Services Start here
-service qfintverify /sbin/qfintverify
-    user root
-    class core
-    oneshot
-
-on property:persist.sys.ssr.restart_level=*
-    start ssr_setup
-
-on property:persist.sys.ssr.enable_ramdumps=1
-    write /sys/module/subsystem_restart/parameters/enable_ramdumps 1
-    start ss_ramdump
-
-on property:persist.sys.ssr.enable_ramdumps=0
-    write /sys/module/subsystem_restart/parameters/enable_ramdumps 0
-
 on property:sys.boot_completed=1
-    start emmc_ffu
-    start mbm_spy
-    start mmi-laser-sh
-    start qe
+    start vendor.mmi-laser-sh
 
     # CPE fw_name used by sound trigger HAL
     chown media audio /sys/kernel/wcd_cpe0/fw_name
@@ -630,15 +570,11 @@ on property:vold.decrypt=trigger_restart_framework
     start config_bluetooth
     start wcnss-service
 
+#services
 service vendor.cnd /vendor/bin/cnd
     class main
     socket cnd stream 660 root inet
     group root wakelock
-    writepid /dev/cpuset/system-background/tasks
-
-service dpmd /system/bin/dpmd
-    class late_start
-    socket dpmd stream 660 root system
     writepid /dev/cpuset/system-background/tasks
 
 service vendor.irsc_util /vendor/bin/irsc_util "/vendor/etc/sec_config"
@@ -697,71 +633,6 @@ service vendor.tftp_server /vendor/bin/tftp_server
     user root
     writepid /dev/cpuset/system-background/tasks
 
-on property:wc_transport.start_hci=true
-    start start_hci_filter
-
-on property:wc_transport.start_hci=false
-    stop start_hci_filter
-
-on property:wc_transport.start_root=true
-    start hci_filter_root
-
-on property:wc_transport.start_root=false
-    stop hci_filter_root
-
-service hci_filter_root /system/bin/wcnss_filter
-    class late_start
-    user bluetooth
-    group bluetooth diag oem_2950
-    disabled
- 
-service config_bluetooth /system/bin/sh /vendor/etc/init.qcom.bt.sh "onboot"
-    class core
-    user bluetooth
-    group bluetooth system
-    oneshot
-
-service hciattach /system/bin/sh /vendor/etc/init.qcom.bt.sh
-    class late_start
-    user bluetooth
-    group bluetooth net_bt_admin
-    disabled
-    oneshot
-
-on property:bluetooth.hciattach=true
-    start hciattach
-
-on property:bluetooth.hciattach=false
-    setprop bluetooth.status off
-
-service bt-dun /system/bin/dun-server /dev/smd7 /dev/rfcomm0
-    class late_start
-    user bluetooth
-    group bluetooth net_bt_admin inet
-    disabled
-    oneshot
-
-service btsnoop /system/bin/btsnoop
-   user bluetooth
-   group bluetooth net_bt_admin sdcard_rw sdcard_r media_rw
-   class late_start
-   disabled
-   oneshot
-
-service vendor.port-bridge /vendor/bin/port-bridge /dev/mhi_pipe_32 /dev/ttyGS0
-    class main
-    user radio system
-    group radio system inet
-    disabled
-    oneshot
-
-# QMUX must be in multiple groups to support external process connections
-service qmuxd /system/bin/qmuxd
-    class main
-    user root
-    group radio audio bluetooth gps nfc diag wakelock
-    writepid /dev/cpuset/system-background/tasks
-
 service vendor.netmgrd /vendor/bin/netmgrd
     class main
     user root
@@ -791,12 +662,6 @@ service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
     interface android.hardware.wifi.supplicant@1.1::ISupplicant default
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
-    disabled
-    oneshot
-
-service ptt_ffbm /system/bin/ptt_socket_app -f -d
-    user root
-    group root
     disabled
     oneshot
 
@@ -836,42 +701,19 @@ service vendor.motosh /vendor/bin/motosh boot
     group compass misc input
     oneshot
 
-service mmi-boot-sh /vendor/etc/init.mmi.boot.sh
+service vendor.mmi-boot-sh /vendor/etc/init.mmi.boot.sh
     class core
     user root
     oneshot
 
-service mmi-laser-sh  /vendor/etc/init.mmi.laser.sh
-    class core
-    user root
-    oneshot
-    disabled
-
-service mmi-touch-sh /system/bin/sh /vendor/etc/init.mmi.touch.sh
-    class core
-    user root
-    oneshot
-
-service oem-hw-sh /vendor/etc/init.oem.hw.sh
+service vendor.mmi-laser-sh  /vendor/etc/init.mmi.laser.sh
     class core
     user root
     oneshot
     disabled
 
-service touch-dead-sh /vendor/etc/init.oem.hw.sh -f
-    class main
-    user root
-    oneshot
-    disabled
-
-service touch-ready-sh /vendor/etc/init.oem.hw.sh -r
-    class main
-    user root
-    oneshot
-    disabled
-
-service oem-hw-config-sh /vendor/etc/init.oem.hw.sh -p
-    class main
+service vendor.oem-hw-sh /vendor/etc/init.oem.hw.sh
+    class core
     user root
     oneshot
     disabled
@@ -886,50 +728,9 @@ service vendor.msm_irqbal_lb /vendor/bin/msm_irqbalance -f /system/vendor/etc/ms
     user root
     group root
 
-on property:hw.touch.status="dead"
-    # start touch-dead-sh
-
-on property:hw.touch.status="ready"
-    # start touch-ready-sh
-
 service vendor.charge_only_mode /vendor/bin/charge_only_mode
     user root
     group graphics system input
-    disabled
-
-service ftmipcd /system/bin/ftmipcd
-    user radio
-    group radio net_raw inet diag
-    disabled
-    oneshot
-
-service qe /xbin/qe /system
-    class main
-    oneshot
-    disabled
-
-service qe_broadcast /xbin/qe /system -b
-    class main
-    oneshot
-    disabled
-
-on property:persist.qe.trigger=1
-    start qe_broadcast
-
-on property:ro.bootmode=factory
-    start ftmipcd
-
-on property:ro.bootmode=mot-factory
-    start ftmipcd
-
-on property:persist.mot.demo_mode_charging=1
-    write /sys/class/power_supply/battery/device/force_demo_mode 1
-
-service mbm_spy /system/bin/mbm_spy
-    class late_start
-    user system
-    group system
-    oneshot
     disabled
 
 on property:ro.secure=0
@@ -953,27 +754,11 @@ service vendor.thermal-com /vendor/bin/thermal-engine --minimode
     user root
     disabled
 
-service esdpll /system/bin/esdpll -w
-    class main
-    user mot_esdfs
-    group mot_esdfs package_info
-
-service emmc_ffu /system/bin/emmc_ffu.sh
-    user root
-    class core
-    oneshot
-    disabled
-
 on property:sys.wifi.tethering=true
     write /sys/class/net/wlan0/queues/rx-0/rps_cpus ${sys.usb.rps_mask}
     write /sys/class/net/wlan0/queues/rx-1/rps_cpus ${sys.usb.rps_mask}
     write /sys/class/net/wlan0/queues/rx-2/rps_cpus ${sys.usb.rps_mask}
     write /sys/class/net/wlan0/queues/rx-3/rps_cpus ${sys.usb.rps_mask}
-
-service setup_shutdown /system/bin/setup_shutdown.sh
-   class main
-   user system
-   oneshot
 
 #start camera server as daemon
 service qcamerasvr /system/bin/mm-qcamera-daemon
@@ -1060,11 +845,16 @@ service vendor.time_daemon /vendor/bin/time_daemon
     group root
     writepid /dev/cpuset/system-background/tasks
 
+#end services
+
 on charger
     wait /dev/block/bootdevice/by-name/system
     mount ext4 /dev/block/bootdevice/by-name/system /system ro barrier=1
+
     load_system_props
+
     setprop persist.sys.usb.config mass_storage
+
     write /sys/class/leds/charging/trigger "battery-full"
 
     trigger early-fs
@@ -1072,6 +862,7 @@ on charger
     trigger post-fs
     trigger post-fs-data
     trigger moto-charger
+
     class_stop main
     class_stop late_start
 
