--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -78,7 +78,7 @@ on enable-low-power
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/use_sched_load 1
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/target_loads "1 960000:85 1094400:90 1344000:80"
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 40000
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1516000
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1651200
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 960000
 
     # enable governor for power cluster
@@ -134,7 +134,7 @@ on enable-low-power
     write /sys/module/cpu_boost/parameters/input_boost_ms 40
 
     # Enable core control
-    write /sys/devices/system/cpu/cpu0/core_ctl/min_cpus 2
+    write /sys/devices/system/cpu/cpu0/core_ctl/min_cpus 0
     write /sys/devices/system/cpu/cpu0/core_ctl/max_cpus 4
     write /sys/devices/system/cpu/cpu0/core_ctl/busy_up_thres 68
     write /sys/devices/system/cpu/cpu0/core_ctl/busy_down_thres 40
@@ -159,12 +159,11 @@ on enable-low-power
     write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 1
     write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 53059
 
-    # Set idle GPU to 240 Mhz
-    write /sys/class/kgsl/kgsl-3d0/default_pwrlevel 4
+    # Set idle GPU to 192 MHz
+    write /sys/class/kgsl/kgsl-3d0/default_pwrlevel 6
 
     # Set perfd properties
     rm /data/system/perfd/default_values
-    start vendor.perfd
 
 on property:init.svc.recovery=running
     trigger enable-low-power
