--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -788,17 +788,10 @@ on property:sys.shutdown.requested=*
     stop vendor.per_proxy
 
 service vendor.ppd /vendor/bin/mm-pp-daemon
-    class late_start
-    disabled
+    class hal
     user system
     socket pps stream 0660 system system
     group system graphics
-
-on property:init.svc.surfaceflinger=stopped
-    stop vendor.ppd
-
-on property:init.svc.surfaceflinger=running
-    start vendor.ppd
 
 service wcnss-service /system/bin/wcnss_service
     class main
