athene: MotoActions: Move to dashboard
Change-Id: I44365bdeb2074f937c2f928ea809e121ce6b2870

--- a/MotoActions/AndroidManifest.xml
+++ b/MotoActions/AndroidManifest.xml
@@ -13,7 +13,8 @@
 
     <application
         android:allowBackup="true"
-        android:label="@string/screen_gestures_panel_title"
+        android:label="@string/moto_actions_title"
+        android:icon="@mipmap/ic_launcher"
         android:persistent="true">
 
         <receiver android:name="com.moto.actions.BootCompletedReceiver">
@@ -41,20 +42,21 @@
 
         <activity
             android:name=".ActionsPreferenceActivity"
-            android:label="@string/screen_gestures_panel_title"
+            android:label="@string/moto_actions_title"
+            android:summary="@string/screen_gestures_panel_summary"
             android:theme="@style/MotoActions">
             <intent-filter>
-                <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
+                <action android:name="com.android.settings.action.IA_SETTINGS" />
             </intent-filter>
             <meta-data
                 android:name="com.android.settings.category"
-                android:value="com.android.settings.category.device" />
+                android:value="com.android.settings.category.ia.homepage" />
             <meta-data
                 android:name="com.android.settings.icon"
-                android:resource="@drawable/ic_settings_gestures" />
+                android:resource="@drawable/ic_settings_gestures_dashboard" />
             <meta-data
                 android:name="com.android.settings.summary"
-                android:resource="@string/summary_empty" />
+                android:resource="@string/screen_gestures_panel_summary" />
         </activity>
 
     </application>
