--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -170,6 +170,7 @@ on property:dev.bootcomplete=1
     trigger enable-low-power
     write /sys/block/dm-0/queue/read_ahead_kb 512
     setprop sys.io.scheduler "cfq"
+    setprop vendor.post_boot.parsed 1
 
 on property:sys.boot_completed=1
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor	interactive
