--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -442,6 +442,9 @@ on post-fs-data
     mkdir /data/vendor/location/gpsone_d 0770 system gps
     mkdir /data/vendor/location/quipc 0770 gps system
     mkdir /data/vendor/location/gsiff 0770 gps gps
+    mkdir /dev/socket/location 0770 gps gps
+    mkdir /dev/socket/location/mq 0770 gps gps
+    mkdir /dev/socket/location/xtra 0770 gps gps
 
     # Create directory from IMS services
     mkdir /data/shared 0755
