--- a/configs/perf/perf-profile1.conf
+++ b/configs/perf/perf-profile1.conf
@@ -1,2 +1,5 @@
 [priority]
 120
+
+[files] # Write any value to any file (assumes not handled by locks section)
+1 /sys/devices/system/cpu/cpu0/core_ctl/min_cpus
