athene: init: per-service: Set pm-service to real-time ioprio
Following Qualcomm and Google, set this service to
real-time io priority to ensure that the commands will
get to the peripherals as soon as possible (in real-time).

Change-Id: Ifeeffaecf97415915e910fa98f924916800eadb5

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -696,6 +696,7 @@ service vendor.per_mgr /vendor/bin/pm-service
     user system
     group system
     writepid /dev/cpuset/system-background/tasks
+    ioprio rt 4
 
 service vendor.per_proxy /vendor/bin/pm-proxy
     class core
